--- a/secao4-projeto1-site-completo/index.html
+++ b/secao4-projeto1-site-completo/index.html
@@ -2,8 +2,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-        <title>Front-End Essencial</title>
+        <meta name="description" content="estudo sobre html e css" />
+        <meta name="robots" content="all" />
+        <meta name="author" content="Lucas Tonello" />
+        <meta name="keywords" content="html, css, javascript, estudo" />
         <link rel="stylesheet" href="./css/style.css" />
+        <title>Estudo Html Css JS</title>
     </head>
     <body>
         <header>
